--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://margarita1007.github.io/realting/",
+  "homepage": "https://margarita1007.github.io/realting2/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -12,11 +12,14 @@
     "@types/node": "^20.1.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/leaflet": "^1.9.0",
+    "@types/leaflet.markercluster": "^1.4.3",
     "antd": "^5.4.7",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
+    "react-leaflet": "^4.0.2",
+    "react-leaflet-cluster": "^2.1.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
