--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^5.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.5.1",
+    "@types/leaflet": "^1.9.0",
+    "@types/leaflet.markercluster": "^1.4.3",
     "@types/node": "^20.1.1",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
-    "@types/leaflet": "^1.9.0",
-    "@types/leaflet.markercluster": "^1.4.3",
     "antd": "^5.4.7",
     "leaflet": "^1.9.3",
     "react": "^18.2.0",
@@ -21,8 +22,10 @@
     "react-leaflet": "^4.0.2",
     "react-leaflet-cluster": "^2.1.0",
     "react-phone-input-2": "^2.15.1",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
